[package]
name = "progresso"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "A progress bar library for the terminal with styling."
homepage = "https://github.com/srjilarious/progressors"
repository = "https://github.com/srjilarious/progressors"
readme = "ReadMe.md"

[dependencies]
crossterm = "0.25.0"
